<resources>
    <!-- Login Activity -->
    <string name="app_name" translatable="false">GlobalPC</string>
    <string name="loginActivity_logo">logo da globalPC</string>
    <string name="loginActivity_Title">Iniciar Sessão</string>
    <string name="loginActivity_emailText" translatable="false">Email</string>
    <string name="loginActivity_emailPlaceholder">Inserir email…</string>
    <string name="loginActivity_passwordText">Palavra-passe</string>
    <string name="loginActivity_passwordPlaceholder">Inserir password…</string>
    <string name="loginActivity_forgotpassword">esqueci a password</string>
    <string name="loginActivity_loginBtn">Iniciar Sessão</string>
    <string name="loginActivity_createAccount">Não tem conta? Registe-se!</string>

    <!-- Register Activity -->
    <string name="registerActivity_Title">Criar Conta</string>

    <string name="registerActivity_usernameText">Nome*</string>
    <string name="registerActivity_usernamePlaceholder">Inserir nome…</string>

    <string name="registerActivity_emailText" translatable="false">Email*</string>

    <string name="registerActivity_passwordText">Palavra-passe*</string>
    <string name="registerActivity_repeatPasswordText">Confirmar Palavra-Passe*</string>

    <string name="registerActivity_registBtn">Criar Conta</string>
    <string name="registerActivity_loginAccount">Já tens conta? Faz login!</string>
</resources>