<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    android:orientation="vertical"
    tools:context=".RegisterActivity">

    <ImageView
        android:id="@+id/logo"
        android:layout_width="@dimen/_120sdp"
        android:layout_height="@dimen/_120sdp"
        android:src="@drawable/global_logo"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.02"
        android:contentDescription="@string/loginActivity_logo" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/card"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/_30sdp"
        android:background="@drawable/registdiv"
        app:layout_constraintTop_toBottomOf="@+id/logo">

        <ScrollView
            android:id="@+id/scroll"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_300sdp"
            app:layout_constraintTop_toTopOf="@+id/card"
            app:layout_constraintBottom_toTopOf="@+id/linear">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:orientation="vertical"
                android:padding="@dimen/_20sdp">

                <TextView
                    android:id="@+id/containerText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/registerActivity_Title"
                    android:textAlignment="center"
                    android:textColor="@color/black"
                    android:textSize="@dimen/_30ssp"
                    android:textStyle="bold" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_6sdp"
                    android:layout_marginLeft="@dimen/_65sdp"
                    android:layout_marginRight="@dimen/_65sdp"
                    android:layout_marginTop="@dimen/_12sdp"
                    android:background="@color/btnBackground" />

                <TextView
                    android:id="@+id/textUsername"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_25sdp"
                    android:text="@string/registerActivity_usernameText"
                    android:textColor="@color/black"
                    android:textSize="@dimen/_16ssp"
                    android:textStyle="bold" />

                <EditText
                    android:id="@+id/usernameInput"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_10sdp"
                    android:background="@drawable/input_layout"
                    android:hint="@string/registerActivity_usernamePlaceholder"
                    android:inputType="textEmailAddress"
                    android:padding="@dimen/_13sdp"
                    android:autofillHints="emailAddress" />

                <TextView
                    android:id="@+id/usernameWarn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_5sdp"
                    android:text=""
                    android:textColor="@color/red"
                    android:textSize="@dimen/_11ssp"
                    android:textStyle="bold"
                    android:visibility="gone"/>

                <TextView
                    android:id="@+id/textEmail"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_25sdp"
                    android:text="@string/registerActivity_emailText"
                    android:textColor="@color/black"
                    android:textSize="@dimen/_16ssp"
                    android:textStyle="bold" />

                <EditText
                    android:id="@+id/emailInput"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_10sdp"
                    android:background="@drawable/input_layout"
                    android:hint="@string/loginActivity_emailPlaceholder"
                    android:inputType="textEmailAddress"
                    android:padding="@dimen/_13sdp"
                    android:autofillHints="emailAddress" />

                <TextView
                    android:id="@+id/emailWarn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_5sdp"
                    android:text=""
                    android:textColor="@color/red"
                    android:textSize="@dimen/_11ssp"
                    android:textStyle="bold"
                    android:visibility="gone"/>


                <TextView
                    android:id="@+id/textPassword"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_30sdp"
                    android:text="@string/registerActivity_passwordText"
                    android:textColor="@color/black"
                    android:textSize="@dimen/_16ssp"
                    android:textStyle="bold" />

                <EditText
                    android:id="@+id/passwordInput"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_10sdp"
                    android:background="@drawable/input_layout"
                    android:hint="@string/loginActivity_passwordPlaceholder"
                    android:padding="@dimen/_13sdp"
                    android:autofillHints="password"
                    tools:ignore="TextFields" />

                <TextView
                    android:id="@+id/passwordWarn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_5sdp"
                    android:text=""
                    android:textColor="@color/red"
                    android:textSize="@dimen/_11ssp"
                    android:textStyle="bold"
                    android:visibility="gone"/>


                <TextView
                    android:id="@+id/textRepeatPassword"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_30sdp"
                    android:text="@string/registerActivity_repeatPasswordText"
                    android:textColor="@color/black"
                    android:textSize="@dimen/_16ssp"
                    android:textStyle="bold" />

                <EditText
                    android:id="@+id/repeatPasswordInput"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_10sdp"
                    android:background="@drawable/input_layout"
                    android:hint="@string/loginActivity_passwordPlaceholder"
                    android:padding="@dimen/_13sdp"
                    android:autofillHints="password"
                    tools:ignore="TextFields" />

                <TextView
                    android:id="@+id/confirmPasswordWarn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_5sdp"
                    android:text=""
                    android:textColor="@color/red"
                    android:textSize="@dimen/_11ssp"
                    android:textStyle="bold"
                    android:visibility="gone"/>



            </LinearLayout>
        </ScrollView>

        <LinearLayout
            android:id="@+id/linear"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingStart="@dimen/_20sdp"
            android:paddingEnd="@dimen/_20sdp"
            android:paddingBottom="@dimen/_20sdp"
            app:layout_constraintTop_toBottomOf="@+id/scroll">

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/loginBtn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_25sdp"
                android:background="@drawable/bluebtn"
                android:padding="@dimen/_7sdp"
                android:text="@string/registerActivity_registBtn"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textSize="@dimen/_20ssp" />
        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <TextView
        android:id="@+id/createAccount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/registerActivity_loginAccount"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="@dimen/_15ssp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/card" />
</androidx.constraintlayout.widget.ConstraintLayout>
